# market-impact-models

./: .env.example  .gitignore  README.md  README_EN.md  init-sspcloud.sh  pyproject.toml  requirements.txt
data/: README.md
data/processed/: metadata.json
data/processed/crypto/: BTCUSDT_1m.parquet  ETHUSDT_1m.parquet  SOLUSDT_1m.parquet
notebooks/: 00_final_report.ipynb  00_project_setup.ipynb  00_rapport_final.ipynb  01_binance_data_collection.ipynb  01_data_collection.ipynb  01_old_data_collection.ipynb  02_almgren_chriss.ipynb  02_almgren_chriss_basic.ipynb  02_bis_first_model.ipynb  02_orderbook_collection.ipynb  03_almgren_chriss_power_law.ipynb  03_almgren_chriss_power_law_executed.ipynb  03_calibration.ipynb  04_EN_parameter_est.ipynb  04_EN_parameter_est_FIXED.ipynb  04_almgren_chriss_quadratic.ipynb  04_parameter_estimation_validation.ipynb  05_almgren_chriss_powerlaw.ipynb  05_orderbook_collection.ipynb  06_parameter_calibration.ipynb  Untitled.ipynb
notebooks/data/processed/: ADAUSDT_clean_5m.parquet  BNBUSDT_clean_5m.parquet  BTCUSDT_clean_1m.parquet  BTCUSDT_clean_5m.parquet  ETHUSDT_clean_1m.parquet  ETHUSDT_clean_5m.parquet  SOLUSDT_clean_1m.parquet  SOLUSDT_clean_5m.parquet  cleaning_statistics.csv  market_data_intraday.parquet  market_parameters.csv  market_parameters.parquet  metadata.json
notebooks/data/raw/: market_data_intraday.parquet
scripts/: README.md  calibrate_impact_parameters.py  collect_orderbook.py  s3_utils.py
src/: __init__.py  data_collector.py  utils.py
src/calibration/: __init__.py  calibrator.py
src/config/: __init__.py  logging_config.py  settings.py
src/data/: __init__.py  collectors.py
src/models/: __init__.py  almgren_chriss.py
src/optimization/: __init__.py  strategies.py
src/storage/: __init__.py  s3_manager.py
tests/: test_calibrator.py  test_strategies.py
